<resources>
    <string name="app_name">Covid-19 Update</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">your name</string>
    <string name="nav_header_subtitle">yourname@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_profile">Profile</string>

    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_blog">Blog</string>

</resources>
